--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,9 @@
 version: '3.1'
 services:
   php-apache-env:
+    # note : container_name cant work when you insist to use as docker stack deploy from docker swarm
     container_name: 'php-apache'
-    image: 'php:latest'
+    image: 'php:8.0-apache'
     volumes:
      # you can change the default path from contianer as well
      - ./php/src:/var/www/html
